# Abyss

./: .gitignore  README.md  package-lock.json
.github/workflows/: hello.yaml  mobile_app.yaml  release-api.yaml  release-firmware.yaml  release-mobile-app.yaml  testing_mobile_workflow.yaml
api/: .env.development  .env.example  app.ts  jest.config.ts  package-lock.json  package.json  server.ts  tsconfig.json
api/db/: pool.ts
api/middleware/: auth.ts  error.ts  rateLimit.ts  validate.ts
api/migrations/: init.sql
app/: .eslintrc.js  App.tsx  README.md  app.json  package-lock.json  package.json
database/: create_database.sql  docker-compose.yml
docs/: architecture.md  mockup.md  technical_choices.md
firmware/: README.md  buttons.py  deploy.sh  pyproject.toml  requirements.txt  sensors.py
firmware/deployment-package/: install.sh
firmware/src/: main.py
firmware/src/button/: buttons.py
firmware/src/display/: display_manager.py
firmware/src/display/screens/: config_screen.py  exit_screen.py  gaz_screen.py  general_screen.py  palier_screen.py  status_screen.py  template_screen.py
firmware/src/display/template/: config_screen.py  gaz_screen.py  general_screen.py  image_template.py  palier_screen.py  status_screen.py
firmware/src/hello_world/: __init__.py  main.py
firmware/src/sensors/: ms5837.py  sensors.py
firmware/src/sensors/ms5837/: depth_temp_sensor.py
firmware/src/utils/: utils.py
firmware/tests/: test_display.py  test_hello.py
hardware/: ListeAchats.xlsx
website/: README.md  package-lock.json  package.json  server.js
(+141 files in other folders)
